# wavefield

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  community-post-draft.md  index.html  package-lock.json  package.json  vite.config.ts
fixtures/audio/: README.md
public/: manifest.webmanifest
scripts/: profile-browser.mjs  profile-scenarios.mjs
src/: analysis.rs  app.rs  app.ts  attribution.ts  boundaryTransition.ts  cli.rs  effectiveSettings.ts  keybindings.ts  main.ts  storage.ts  templateSettings.ts  templateTransition.ts  terminal.rs  types.ts  vite-env.d.ts  wander.ts
src/audio/: ModalField.ts  analysisPreview.ts  analyze.ts  audioController.ts  audioOutputState.ts  chladniModes.ts  chladniStability.ts  featureAnalysis.ts  fft.ts  fieldSources.ts  liveAnalysis.ts  manualToneController.ts  modalAtlas.ts  modalDrivers.ts  modalMath.ts  modalState.ts  modalTypes.ts  modeAtlas.ts  modeBank.ts  modeProjection.ts  sphericalModes.ts
src/config/: settings.ts
src/performance/: renderProfiler.ts
src/render/: ansi.rs  cymatic.rs  kitty.rs  (+1 more)
test/: audio-feature-analysis.test.ts  color-uniform.test.ts  effective-settings.test.ts  fisheye-effect.test.ts  fisheye-uniforms.test.ts  postprocessing-pipeline.test.ts  render-profiler.test.ts  screen-wheel-gesture.test.ts  screen-zoom-loop.test.ts  settings-transition-controller.test.ts  storage.test.ts  template-controls.test.ts  terminal-contour-effect.test.ts  terminal-uniforms.test.ts  wander.test.ts
tests/: cli.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+76 files in other folders)
