[package]
name = "wavefield"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A terminal cymatic audio visualizer."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
rodio = { version = "0.22", features = ["playback"] }
rustfft = "6.4"
symphonia = { version = "0.5", features = ["all"] }
